# Qt_akp_view

./: .gitignore  CMakeLists.txt  README.md  akp_check_state.cpp  akp_check_state.h  akp_class.cpp  akp_class.h  app_config.h.in  app_resources.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt.conf  qt_akp_file.cpp  qt_akp_file.h  qt_akp_view_ru_RU.ts  qt_bigreed.cpp  qt_bigreed.h  qt_deptcol.cpp  qt_deptcol.h  qt_ml.cpp  qt_ml.h  qt_time_line.cpp  qt_time_line.h  qt_vak_32_fkd.cpp  qt_vak_32_fkd.h  qt_vk.cpp  qt_vk.h  release_notes.md  resources.rc.in  tool_type.h  vak_8.h  vak_8_2pc.cpp  vak_8_2pc.h
